tests/types/errors/join_on_not_bool.mochi
let a = [ { id: 1 }, { id: 2 } ]
let b = [ { id: 1 }, { id: 2 } ]
let r = from x in a
        join from y in b on x.id
        select x
